--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
   <div class="container">
     
       <div class="item">
+        <a href="view/404.html" target="_blank">
+          <span class="file-icon">📄</span>
+          404.html
+        </a>
+        <div class="path">404.html</div>
+      </div>
+    
+      <div class="item">
         <a href="view/index copy.html" target="_blank">
           <span class="file-icon">📄</span>
           index copy.html
